--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
+    <title>Contact us</title>
 </head>
 <body>
     
-</body>
+        <h1>Contact us</h1>
+        <span style="color: #008000;"><a style="color: #008000;" href="file:///Users/Reena/Documents/Final_proj_Reena/index.html">Home</a>&nbsp;</span> 
+        <p> Phone No: 3067131275</p>
+        <p> Mail To: <a href="mailto:reenashrestha2@gmail.com">reenashrestha2@gmail.com</a></p></p>
+    </body>
 </html>
