--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>nepsoss</title>
+    <title>SaskGroup</title>
+    <style type="text/css">
+        /* We select all the document span elements and apply the color property with a white value */
+        h1 {
+          color:blue;
+          font-size: 38px;
+          text-align: center;
+        }
+        span {
+font-size: 28px;
+        }
+      </style>
 </head>
 <body>
+        <p><img src="images\logo.jpg" width="90" height="80" align="right" href="file:///Users/Reena/Documents/Final_proj_Reena/index.html"></p></a></p>
+    <h1>Welcome to SaskGroup</h1>
+    <p>
+        <span style="color: #008000;"><a style="color: #008000;" href="file:///Users/Reena/Documents/Final_proj_Reena/index.html">Home</a>&nbsp;</span> 
     
-</body>
+        <span style="color: green;"><a href="file:///Users/Reena/Documents/Final_proj_Reena/memberships.html">Membership</a>&nbsp; 
+        Events&nbsp; <a style="color: #008000;" href="file:///Users/Reena/Documents/Final_proj_Reena/contact.html">Contact Us</a></span>
+    </p>
+    <p style="text-align: justify;"><span>SaskGroup is a group of Nepalese people work in SaskPower, Saskatchewan&nbsp;that conducts and supports community activities among Nepalese living in Southern Saskatchewan.&nbsp;</span></p>
+
+
+
+
+    </body>
 </html>
