--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SaskGroup</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <style type="text/css">
         /* We select all the document span elements and apply the color property with a white value */
         h1 {
@@ -14,23 +16,46 @@
           text-align: center;
         }
         span {
+          color: green;
 font-size: 28px;
         }
-      </style>
+        a {
+          color:green;
+
+        }
+        p {
+          color:black;
+          font-size: 28px;
+        }
+        .right { 
+          color: black;
+          text-align:justify; 
+          font: 1em sans-serif;
+          font-size: 20px;
+          text-indent: 12px;
+          }
+      </style> 
 </head>
 <body>
-        <p><img src="images\logo.jpg" width="90" height="80" align="right" href="file:///Users/Reena/Documents/Final_proj_Reena/index.html"></p></a></p>
+        <p><img src="images\unnamed.jpg" width="140" height="130" align="right" href="index.html"></p>
     <h1>Welcome to SaskGroup</h1>
     <p>
-        <span style="color: #008000;"><a style="color: #008000;" href="file:///Users/Reena/Documents/Final_proj_Reena/index.html">Home</a>&nbsp;</span> 
+        <span><a href="index1.html">Home</a>&nbsp;</span> 
     
-        <span style="color: green;"><a href="file:///Users/Reena/Documents/Final_proj_Reena/memberships.html">Membership</a>&nbsp; 
-        Events&nbsp; <a style="color: #008000;" href="file:///Users/Reena/Documents/Final_proj_Reena/contact.html">Contact Us</a></span>
+        <span style="color: green;"><a href="memberships.html">Membership</a>&nbsp; 
+        Events&nbsp; <a style="color: #008000;" href="contact.html">Contact Us</a></span>
     </p>
-    <p style="text-align: justify;"><span>SaskGroup is a group of Nepalese people work in SaskPower, Saskatchewan&nbsp;that conducts and supports community activities among Nepalese living in Southern Saskatchewan.&nbsp;</span></p>
+    
 
+    <h3><span style="color: #ff6600;">Family Bowling Event:</span></h3>
+    <p><img src="images\download.jpeg"  width="190" height="180" align ="left"/>
+      <br>
+      <div class="right"> &nbsp;&nbsp;We are very excited to inform you that SaskGroup is organizing Family Bowling Evening on Saturday 28th
+        December 2019 from 6 pm &nbsp;&nbsp;to 7:30 pm to celebrate Christmas and New 
+      Year. Pizza and drinks will be served during the event. This is a fun event for &nbsp;&nbsp;&nbsp;&nbsp;SaskGroup family. We would like to request you to come with all of your family members. Additional event details will be shared later.</div>
 
-
-
+      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     </body>
 </html>
