--- a/public/contact.html
+++ b/public/contact.html
@@ -43,7 +43,7 @@ input[type=submit]:hover {
 <body>
     
         <h1>Contact us</h1>
-        <span style="color: #008000;"><a style="color: #008000;" href="index.html">Home</a>&nbsp;</span> 
+        <span style="color: #008000;"><a style="color: #008000;" href="indexold.html">Home</a>&nbsp;</span> 
         <p> Email SaskGroup</p>
         <fieldset style="width:800px">
         <form action="save_user.html" method="post" enctype="application/x-www-form-urlencoded" name="login">
