--- a/public/memberships.html
+++ b/public/memberships.html
@@ -47,7 +47,7 @@
     <body>
         
             <h1>Welcome to SaskGroup</h1>
-            <p> <a style="color: #008000;" href="index.html">Home</a>&nbsp;
+            <p> <a style="color: #008000;" href="indexold.html">Home</a>&nbsp;
               
                 <span class="dropdown">
                     <button class="dropbtn">Membership</button>
