--- a/public/indexold.html
+++ b/public/indexold.html
@@ -1,61 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SaskGroup</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <style type="text/css">
-        /* We select all the document span elements and apply the color property with a white value */
-        h1 {
-          color:blue;
-          font-size: 38px;
-          text-align: center;
-        }
-        span {
-          color: green;
-font-size: 28px;
-        }
-        a {
-          color:green;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>SaskGroup</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <style type="text/css">
+    /* We select all the document span elements and apply the color property with a white value */
+    h1 {
+      color: blue;
+      font-size: 38px;
+      text-align: center;
+    }
 
-        }
-        p {
-          color:black;
-          font-size: 28px;
-        }
-        .right { 
-          color: black;
-          text-align:justify; 
-          font: 1em sans-serif;
-          font-size: 20px;
-          text-indent: 12px;
-          }
-      </style> 
+    span {
+      color: green;
+      font-size: 28px;
+    }
+
+    a {
+      color: green;
+
+    }
+
+    p {
+      color: black;
+      font-size: 28px;
+    }
+
+    .right {
+      color: black;
+      text-align: justify;
+      font: 1em sans-serif;
+      font-size: 20px;
+      text-indent: 12px;
+    }
+  </style>
 </head>
+
 <body>
-        <p><img src="images\unnamed.jpg" width="140" height="130" align="right" href="index.html"></p>
-    <h1>Welcome to SaskGroup</h1>
-    <p>
-        <span><a href="index1.html">Home</a>&nbsp;</span> 
-    
-        <span style="color: green;"><a href="memberships.html">Membership</a>&nbsp; 
-        Events&nbsp; <a style="color: #008000;" href="contact.html">Contact Us</a></span>
-    </p>
-    
+  <p><img src="images\unnamed.jpg" width="140" height="130" align="right" href="index.html"></p>
+  <h1>Welcome to SaskGroup</h1>
+  <p>
+    <a href="index1.html">Home</a>&nbsp;&nbsp;
 
-    <h3><span style="color: #ff6600;">Family Bowling Event:</span></h3>
-    <p><img src="images\download.jpeg"  width="190" height="180" align ="left"/>
-      <br>
-      <div class="right"> &nbsp;&nbsp;We are very excited to inform you that SaskGroup is organizing Family Bowling Evening on Saturday 28th
-        December 2019 from 6 pm &nbsp;&nbsp;to 7:30 pm to celebrate Christmas and New 
-      Year. Pizza and drinks will be served during the event. This is a fun event for &nbsp;&nbsp;&nbsp;&nbsp;SaskGroup family. We would like to request you to come with all of your family members. Additional event details will be shared later.</div>
+    <a href="memberships.html">Membership</a>&nbsp;
+      <span style ="color: green;">Events</span>&nbsp;
+    <a href="contact.html">Contact Us</a>
+  </p>
 
-      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    </body>
+
+  <h3><span style="color: #ff6600;">Family Bowling Event:</span></h3>
+  <p><img src="images\download.jpeg" width="190" height="180" align="left" />
+    <br>
+    <div class="right"> &nbsp;&nbsp;We are very excited to inform you that SaskGroup is organizing Family Bowling
+      Evening on Saturday 28th
+      December 2019 from 6 pm &nbsp;&nbsp;to 7:30 pm to celebrate Christmas and New
+      Year. Pizza and drinks will be served during the event. This is a fun event for &nbsp;&nbsp;&nbsp;&nbsp;SaskGroup
+      family. We would like to request you to come with all of your family members. Additional event details will be
+      shared later.</div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"></script>
+</body>
+
 </html>
