--- a/public/pastevent.html
+++ b/public/pastevent.html
@@ -5,25 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+    li {
+        color:royalblue;
+        font-size: 18px;
+    }
+        </style>
 </head>
 <body>
-    <h1>September Birthday Pics</h1>
+        <h1>Year 2019</h1>
+
+        <ul style="list-style-type:circle;">
+          <li>New Year Celebration</li>
+          <li>Teej Celebration</li>
+          <li>Diwali Celebration</li>
+          <li>Dashain celebration</li>
+          <li>Deusi bhailo</li>
+        </ul>  
+    <h2> Gallery</h2>
     <p>
         <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
-        <img src="images\unnamed.jpg" width="140" height="130" align="left"</p>
+        
+        
 </body>
 </html>
