--- a/public/indexold.html
+++ b/public/indexold.html
@@ -10,61 +10,37 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <style type="text/css">
-    /* We select all the document span elements and apply the color property with a white value */
-    h1 {
-      color: blue;
-      font-size: 38px;
-      text-align: center;
-    }
-
-    span {
-      color: green;
-      font-size: 28px;
-    }
-
-    a {
-      color: green;
-
-    }
-
-    p {
-      color: black;
-      font-size: 28px;
-    }
-
-    .right {
-      color: black;
-      text-align: justify;
-      font: 1em sans-serif;
-      font-size: 20px;
-      text-indent: 12px;
-    }
-  </style>
+  
 </head>
 
 <body>
-  <p><img src="images\unnamed.jpg" width="140" height="130" align="right" href="index.html"></p>
+  <p><img src='./images/unnamed.jpg', width='170', height='150', align='right', href='indexold.html'></p>
   <h1>Welcome to SaskGroup</h1>
   <p>
-    <a href="index1.html">Home</a>&nbsp;&nbsp;
-
-    <a href="memberships.html">Membership</a>&nbsp;
-      <span style ="color: green;">Events</span>&nbsp;
-    <a href="contact.html">Contact Us</a>
+    <span>
+     <a href="indexold.html">Home</a>
+     <a href="memberships.html">Membership</a>
+     <a href="event1.html">Events</a>
+     <a href="contact.html">Contact Us</a>
+     <a href="index1.html">About Us</a>
+   </span>
   </p>
-
-
-  <h3><span style="color: #ff6600;">Family Bowling Event:</span></h3>
-  <p><img src="images\download.jpeg" width="190" height="180" align="left" />
+  <h2><span style="color: #ff6600;">Christmas Party:</span></h2>
+  <p><img src='images/christmas.jpg', width='470', height='360', align='left'></p>
     <br>
-    <div class="right"> &nbsp;&nbsp;We are very excited to inform you that SaskGroup is organizing Family Bowling
-      Evening on Saturday 28th
-      December 2019 from 6 pm &nbsp;&nbsp;to 7:30 pm to celebrate Christmas and New
-      Year. Pizza and drinks will be served during the event. This is a fun event for &nbsp;&nbsp;&nbsp;&nbsp;SaskGroup
-      family. We would like to request you to come with all of your family members. Additional event details will be
-      shared later.</div>
-
+    <div class="right"> &nbsp;&nbsp;We are very excited to inform you that SaskGroup is organizing Christmas Party on Tuesday 24th
+        December 2019 from 6 pm to 10:30 pm to celebrate Christmas and New
+         Year. It would be potluck event. This is a fun event for SaskGroup family. We would like to request you to come with all of your family members. Additional event details will be shared later.</div>
+      <h3>Art</h3>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+      <p><img src='images/ashmee.jpg', alt="Paris" style="width:50%;")></p>
+      
+      <div class ="left"> &nbsp;&nbsp; Art by: Ashmee Adhikari</div>
+  
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
       crossorigin="anonymous"></script>
